deploy/env/main/frontend-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: k8s-ovh.infra.wogra.com
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  tls:
    - hosts:
        - webnet-builder-main.infra.wogra.com
      secretName: webnet-builder-tls
  rules:
    - host: webnet-builder-main.infra.wogra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
