deploy/env/main/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webnet-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - webnet-builder-main.main-kubernetes.wogra.com
      secretName: webnet-builder-tls
  rules:
    - host: webnet-builder-main.main-kubernetes.wogra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
